--- a/playground/five38.ipynb
+++ b/playground/five38.ipynb
@@ -6,7 +6,7 @@
       "name": "five38.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +15,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ccny-data/College_Major_Data/blob/master/playground/five38.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "metadata": {
         "id": "LF34dDrlyGhx",
         "colab_type": "code",
@@ -32,7 +22,59 @@
       },
       "cell_type": "code",
       "source": [
-        ""
+        "# import stuffs\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "4UkC8-MgzEXO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# load data\n",
+        "all_ages = pd.read_csv('https://raw.githubusercontent.com/ccny-data/College_Major_Data/master/data/fivethirtyeight-college-majors-dataset/all-ages.csv')\n",
+        "grad_students = pd.read_csv('https://raw.githubusercontent.com/ccny-data/College_Major_Data/master/data/fivethirtyeight-college-majors-dataset/grad-students.csv')\n",
+        "majors_list = pd.read_csv('https://raw.githubusercontent.com/ccny-data/College_Major_Data/master/data/fivethirtyeight-college-majors-dataset/majors-list.csv')\n",
+        "recent_grads = pd.read_csv('https://raw.githubusercontent.com/ccny-data/College_Major_Data/master/data/fivethirtyeight-college-majors-dataset/recent-grads.csv')\n",
+        "women_stem = pd.read_csv('https://raw.githubusercontent.com/ccny-data/College_Major_Data/master/data/fivethirtyeight-college-majors-dataset/women-stem.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "tBSAzyYgzbpq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# test headings \n",
+        "\n",
+        "# all_ages.head(1)\n",
+        "# grad_students.head(1)\n",
+        "# majors_list.head(1)\n",
+        "# recent_grads.head(1)\n",
+        "# women_stem.head(1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "uNQUI7nS0B7w",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        " "
       ],
       "execution_count": 0,
       "outputs": []
